--- a/index.html
+++ b/index.html
@@ -514,5 +514,6 @@
     <script type="module" src="js/balance.js"></script>
     <script type="module" src="js/categories.js"></script>
     <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/ui.js"></script>
 </body>
 </html>
