--- a/index.html
+++ b/index.html
@@ -227,12 +227,27 @@
                     </div>
                 </div>
 
+                <!-- Settings Widget -->
+                <div class="bg-white rounded-2xl shadow-lg p-6 mb-6">
+                    <h3 class="font-bold text-xl mb-4 text-gray-800 flex items-center gap-2">
+                        <span>⚙️</span>
+                        Configuración
+                    </h3>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                        <button id="dashboard-manage-categories-btn" class="bg-gray-100 hover:bg-gray-200 text-gray-700 font-semibold py-4 px-4 rounded-xl transition card-hover">
+                            <div class="text-3xl mb-2">🗂️</div>
+                            Gestionar Categorías
+                        </button>
+                        <!-- Add more settings buttons here in the future -->
+                    </div>
+                </div>
+
                 <!-- Chart and Recent Activity -->
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
                     <div class="bg-white rounded-2xl shadow-lg p-6 card-hover">
                         <h3 class="font-bold text-xl mb-4 text-gray-800 flex items-center gap-2">
                             <span>📊</span>
-                            Gastos por Categoría (Mes Actual)
+                            Gastos por Categoría
                         </h3>
                         <canvas id="expense-chart"></canvas>
                     </div>
@@ -514,6 +529,5 @@
     <script type="module" src="js/balance.js"></script>
     <script type="module" src="js/categories.js"></script>
     <script type="module" src="js/app.js"></script>
-    <script type="module" src="js/ui.js"></script>
 </body>
 </html>
