--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="bg-white rounded-2xl shadow-lg p-6 card-hover">
                         <h3 class="font-bold text-xl mb-4 text-gray-800 flex items-center gap-2">
                             <span>📊</span>
-                            Gastos por Categoría
+                            Gastos por Categoría (Mes Actual)
                         </h3>
                         <canvas id="expense-chart"></canvas>
                     </div>
