--- a/index.html
+++ b/index.html
@@ -425,11 +425,20 @@
                         <input type="hidden" id="transaction-type" value="expense">
                     </div>
 
-                    <!-- Amount -->
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Monto</label>
-                        <input type="number" id="transaction-amount" step="0.01" required
-                            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                    <!-- Amount and Currency -->
+                    <div class="grid grid-cols-3 gap-4">
+                        <div class="col-span-2">
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Monto</label>
+                            <input type="number" id="transaction-amount" step="0.01" required
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Moneda</label>
+                            <select id="transaction-currency" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                                <option value="CRC">₡ CRC</option>
+                                <option value="USD" selected>$ USD</option>
+                            </select>
+                        </div>
                     </div>
 
                     <!-- Description -->
