--- a/index_new.html
+++ b/index_new.html
@@ -247,9 +247,7 @@
 
                     <!-- Analytics Tab -->
                     <div id="analytics-tab" class="dashboard-tab-panel hidden space-y-6">
-                        <div id="analytics-widgets-container">
-                            <!-- Widgets will be injected here by app.js -->
-                        </div>
+                        <!-- Analytics widgets (Trends, Comparison) will be injected here -->
                     </div>
 
                     <!-- Goals & Budgets Tab -->
